ASSERT SHOULD NEVER BE REACHED - WebCore::Layout::leadingInlineItemPositionOnLastLine https://bugs.webkit.org/show_bug.cgi?id=285878

Reviewed by Antti Koivisto.

First/last layout box flag needs to be set on the entire content and not just on the newly created one.
It ensures the spanning inline boxes are handled correctly when the damaged line
starts with one.

* LayoutTests/fast/dynamic/partial-layout-with-spanning-inline-box-assert-expected.txt: Added.
* LayoutTests/fast/dynamic/partial-layout-with-spanning-inline-box-assert.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentBuilder.cpp:
(WebCore::LayoutIntegration::InlineContentBuilder::build const):
(WebCore::LayoutIntegration::InlineContentBuilder::handlePartialDisplayContentUpdate const):
* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentBuilder.h:

Canonical link: https://commits.webkit.org/288870@main